# document_classification

./: README.md  content_extraction.py  main.py  pyproject.toml
