[project]
name = "classifier-assignment"
version = "0.1.0"
description = "Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "fastapi>=0.115.12",
   "python-multipart>=0.0.20",
   "uvicorn>=0.34.2",
   "pdfplumber>=0.11.2",
   "PyMuPDF>=1.24.10",
   "PyPDF2>=3.0.1",
   "sentence-transformers>=3.1.1",
   "transformers>=4.44.2",
   "pytesseract>=0.3.13",
   "pdf2image>=1.17.0",
   "transformers>=2.5.1"
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
